force-app/main/default/objects/Account_Address__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Address for this account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>