force-app/main/default/objects/Account_Address__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The relevant address record</description>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipName>Account_Addresses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>