force-app/main/default/objects/Account_Address__c/fields/Address_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Address_Unique_Key__c</fullName>
    <description>This field automatically uses the Unique Key of the related Address for automation process.</description>
    <formula>Address__r.Unique_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Unique Key</label>
    <type>Text</type>
</CustomField>