force-app/main/default/objects/Account_Address__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <description>This field is used to visualize the full address of the related address record on the account address page and in the automation.</description>
    <formula>Address__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>