force-app/main/default/objects/Account_Address__c/fields/Full_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Street_Name__c</fullName>
    <description>Constructs a street value for usein Billing- or Shippingstreet</description>
    <formula>IF(
	OR(ISBLANK(TEXT(Address__r.Country__c)), TEXT(Address__r.Country__c) = &apos;NL&apos;),
	IF(
			NOT(ISBLANK(Address__r.PO_Box_Number__c)),
			&quot;Postbus &quot;&amp;Address__r.PO_Box_Number__c,
			IF(
				NOT(ISBLANK(Address__r.Freepost_number__c)),
				&quot;Antwoordnummer &quot;&amp;Address__r.Freepost_number__c,
				Address__r.Street__c&amp;&quot; &quot;&amp; Address__r.House_Number__c&amp;&quot; &quot;&amp;Address__r.House_Letter__c&amp;&quot; &quot;&amp;Address__r.House_Number_Addition__c
			)
	),
	TRIM(Address__r.Address_Line_1__c&amp;&quot; &quot;&amp;Address__r.Address_Line_2__c)
)</formula>
    <label>Full Street Name</label>
    <type>Text</type>
</CustomField>