force-app/main/default/objects/Account_Address__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If primary, this address will be also shown on the main account record</description>
    <inlineHelpText>If primary, this address will be also shown on the main account record</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>