force-app/main/default/objects/Account_Address__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of this Account address record. Postadres corresponds with BillingAddress and Eenheid/Woonadres with ShippingAddress on Account</description>
    <inlineHelpText>Type of this Account address record. Postadres corresponds with BillingAddress and Eenheid/Woonadres with ShippingAddress on Account</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WOO</fullName>
                <label>Woonadres</label>
            </value>
            <value>
                <fullName>POS</fullName>
                <label>Postadres</label>
            </value>
            <value>
                <fullName>BUI</fullName>
                <isActive>false</isActive>
                <label>Buitenlands adres</label>
            </value>
            <value>
                <fullName>EEN</fullName>
                <isActive>false</isActive>
                <label>EEN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>