force-app/main/default/objects/Account_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Address__c</columns>
    <columns>Type__c</columns>
    <columns>Is_Primary__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Active__c</columns>
    <columns>Considered_as_Incorrect_Address_Change__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>All</label>
</ListView>